# novel-agent-workbench

./: .gitignore  BUILD_NovelAgentWorkbench.bat  LICENSE  README.md  SETUP_ENV.bat  START_NovelAgentWorkbench.cmd  design-qa.md  pyproject.toml
codex_docs/: APPLICATION_SERVICE_CONTRACT.md  CLI_QUICKSTART.md  DECISIONS.md  DESKTOP_APP_BUILD.md  IMPORTANT_OPEN_ISSUES.md  PROJECT_CHARTER.md  PROVIDER_ADAPTER_CONTRACT.md  README.md
codex_logs/: README.md
codex_logs/2026-05-17_current_work_review/: README.md
codex_logs/2026-05-17_git_init/: README.md
codex_logs/2026-05-17_mvp0_checkpoint/: README.md
codex_logs/2026-05-17_mvp0_foundation_completion/: README.md
docs/: codex_worklog.md  model-settings-hermes-redesign-plan.md
packaging/: desktop_launcher.py
scripts/: build_windows_exe.ps1  generate_windows_icon.py
src/: README.md
tests/: README.md  test_application_service.py  test_audit.py  test_chapter_workflow.py  test_cli.py  test_confirmed_chapter_delete.py  test_context_assembler.py  test_context_queue.py  test_corpus_boundaries.py  test_corpus_profile_artifacts.py  test_corpus_profiler.py  test_corpus_samples.py  test_desktop_workspace_helpers.py  test_draft_generation.py  test_draft_regeneration_prompt.py  test_manual_rewrite.py  test_manual_rewrite_comparison.py  test_memory_bank_api_generation.py  test_model_settings_v2.py  test_planning_library_records.py  test_project_foundation.py  test_project_registry.py  test_project_store.py  test_provider_config.py  test_publication.py  test_reviews.py  test_revision_requests.py  test_self_style_baseline.py
(+140 files in other folders)
