[project]
name = "novel-agent-workbench"
version = "0.1.0"
description = "Local recoverable long-form novel writing workbench."
requires-python = ">=3.13"
dependencies = []

[project.scripts]
novel-agent-workbench = "novel_agent_workbench.cli:main"
novel-agent-workbench-desktop = "novel_agent_workbench.desktop_app:main"

[tool.setuptools.package-data]
novel_agent_workbench = ["assets/*.ico", "assets/*.png"]

[tool.unittest]
testpaths = ["tests"]
